--- a/SGRSalary.csproj
+++ b/SGRSalary.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -163,10 +165,24 @@
     <Compile Include="Forms\OPform\frmOPDeductions.Designer.cs">
       <DependentUpon>frmOPDeductions.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\SGR_Model.Context.cs" />
-    <Compile Include="Model\SGR_Model.cs" />
-    <Compile Include="Model\SGR_Model.Designer.cs" />
-    <Compile Include="Model\User.cs" />
+    <Compile Include="Model\SGR_Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SGR_Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\SGR_Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SGR_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\SGR_Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SGR_Model.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\User.cs">
+      <DependentUpon>SGR_Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\BIform\frmBank.resx">
@@ -229,6 +245,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EntityDeploy Include="Model\SGR_Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>SGR_Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\SGR_Model.edmx.diagram">
+      <DependentUpon>SGR_Model.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -244,6 +267,21 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Content Include="Model\SGR_Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SGR_Model.edmx</DependentUpon>
+      <LastGenOutput>SGR_Model.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\SGR_Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SGR_Model.edmx</DependentUpon>
+      <LastGenOutput>SGR_Model.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
