--- a/SGRSalary.csproj
+++ b/SGRSalary.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Classes\ExcelOprations.cs" />
     <Compile Include="Classes\Extention.cs" />
     <Compile Include="Classes\Repository.cs" />
+    <Compile Include="Forms\BIform\BaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BIform\BaseForm.Designer.cs">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\BIform\frmBank.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\BIform\BaseForm.resx">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\BIform\frmBank.resx">
       <DependentUpon>frmBank.cs</DependentUpon>
     </EmbeddedResource>
