--- a/SGRSalary.csproj
+++ b/SGRSalary.csproj
@@ -81,7 +81,9 @@
     <Compile Include="Classes\BaseRepository.cs" />
     <Compile Include="Classes\ExcelOprations.cs" />
     <Compile Include="Classes\Extention.cs" />
+    <Compile Include="Classes\IRepository.cs" />
     <Compile Include="Classes\Repository.cs" />
+    <Compile Include="Classes\RepositorySGR.cs" />
     <Compile Include="Forms\BIform\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
